tests/fail/fail_void_func_in_expr.kl
fn printHello() vaziu {
    mostran("Hello");
}

fn inisiu() {
    nter x = 1 + printHello();
}
